# typescript-learn-fastest-udemy

./: .gitignore  README.md
other_project_python01/: .tool-versions  pyproject.toml
other_project_python01/src/: main.py
other_project_python01/src/abstracts/: abstract.py
other_project_python01/src/businesses/: business.py
other_project_python01/src/impls/: broken.py  fake.py  impl.py
other_project_python01/tests/business/: test_business.py
project_01/: package-lock.json  package.json  tsconfig.json
project_01/src/: class.ts  index.ts  interface.ts  interface_and_implements.ts  interface_extends.ts  intersection.ts
project_angular_01/: README.md  angular.json  package-lock.json  package.json
project_angular_01/src/app/: abstract.car.service.ts  app.config.ts  app.routes.ts  app.spec.ts  app.ts  car.service.ts  car.ts  child.ts  reverse.pipe.ts  user.ts
project_docker_NAFP/: README.md
project_docker_NAFP/angular/: angular.json  package.json  tsconfig.json
project_docker_NAFP/angular/src/: index.html  main.ts
project_docker_NAFP/composes/: dev.yml
project_docker_NAFP/fastapi/: README_API.md  main.py  requirements.txt
project_docker_NAFP/fastapi/application/: category_service.py  item_service.py  user_service.py
project_docker_NAFP/fastapi/domain/: __init__.py  entities.py  repositories.py
project_docker_NAFP/fastapi/infrastructure/: __init__.py  category_repository.py  database.py  item_category_repository.py  item_repository.py  models.py  user_repository.py
project_docker_NAFP/fastapi/presentation/: __init__.py  auth.py  auth_routes.py  category_routes.py  dependencies.py  item_routes.py  schemas.py  user_routes.py
project_docker_NAFP/nginx/conf.d/: default.conf
project_docker_TAFP/: .gitignore  README.md
project_docker_TAFP/angular/: angular.json  package-lock.json  package.json
project_docker_TAFP/certs/: localhost+1-key.pem  localhost+1.pem  localhost-key.pem  localhost.pem
project_docker_TAFP/composes/: dev.yml
project_docker_TAFP/fastapi/: README_API.md  main.py  requirements.txt
project_docker_TAFP/nginx/: nginx.conf
(+160 files in other folders)
